// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApplicantModule /> shows the correct snapshot tree for the <ApplicantModule> module 1`] = `
.css-0,
[data-css-0] {
  height: 4px;
  background-color: #4d4d4d;
}

.css-1,
[data-css-1] {
  position: relative;
  max-width: 960px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 16px;
  padding-left: 16px;
}

.css-2,
[data-css-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 128px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-3,
[data-css-3] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  font-size: 34px;
  font-weight: 200;
  color: #808080;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.css-4,
[data-css-4] {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  margin-top: 8px;
  margin-bottom: 8px;
  align-items: flex-end;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-align: end;
  -webkit-align-items: flex-end;
}

.css-5,
[data-css-5] {
  font-size: 14px;
  font-weight: 600;
  text-transform: uppercase;
  color: #999;
}

.css-6,
[data-css-6] {
  margin-top: 8px;
  margin-left: 0;
}

.css-7,
[data-css-7] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  margin-top: 8px;
  font-size: 14px;
  font-weight: 400;
  text-transform: uppercase;
  color: #4d4d4d;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-8,
[data-css-8] {
  margin-right: 8px;
}

.css-9,
[data-css-9] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  margin-top: 8px;
  margin-bottom: 8px;
  color: #808080;
  flex-flow: row nowrap;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-flex-flow: row nowrap;
}

.css-10,
[data-css-10] {
  font-size: 14px;
  font-weight: 600;
  text-transform: uppercase;
  color: currentColor;
  min-width: 192px;
}

.css-11,
[data-css-11] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  margin-left: 0;
  font-size: 16px;
  font-weight: 200;
  color: currentColor;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-12,
[data-css-12] {
  position: relative;
  z-index: 2;
  color: #35c5fc;
  text-decoration: none;
  transition: color 200ms;
  -webkit-transition: color 200ms;
  -moz-transition: color 200ms;
}

.css-13,
[data-css-13] {
  position: relative;
  max-width: 960px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 16px;
  padding-left: 16px;
  margin-top: 72px;
}

.css-14,
[data-css-14] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 44px;
  border-bottom: 1px solid #ccc;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-15,
[data-css-15] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-flow: row nowrap;
  font-size: 28px;
  font-weight: 300;
  color: #808080;
  -webkit-flex-flow: row nowrap;
}

.css-16,
[data-css-16] {
  color: #8ad30e;
  margin-left: 8px;
}

.css-16::before,
[data-css-16]::before {
  content: " : ";
  color: #808080;
}

.css-18,
[data-css-18] {
  position: relative;
  z-index: 2;
  color: #35c5fc;
  text-decoration: none;
  transition: color 200ms;
  font-size: 18px;
  -webkit-transition: color 200ms;
  -moz-transition: color 200ms;
}

<div>
  <div
    className="css-0"
  />
  <section
    className="css-1"
  >
    <header
      className="css-2"
    >
      <h2
        className="css-3"
      >
        Kenny Bania
      </h2>
      <dl
        className="css-4"
      >
        <dt
          className="css-5"
        >
          Application Status
        </dt>
        <dd
          className="css-6"
        >
          <span
            className="css-7"
          >
            <svg
              className="css-8"
              height={32}
              viewBox="0 0 24 24"
              width={32}
            >
              <g
                fill="currentColor"
              >
                <path
                  d="M24,0 C24,0 23.4836048,9.80252996 16.4820958,15.2719707 L16.4128111,19.0346251 L11.4820194,24 L11.4746834,20.2882431 L9.63105705,18.6292449 C8.29671435,22.7691304 1.26439406,22.7691304 1.26439406,22.7691304 C1.26439406,22.7691304 1.26439406,16.3396736 5.58319762,14.4450082 L3.94220876,12.6079505 L-2.84217094e-14,12.6079505 L5.07440302,7.66843342 L8.7285621,7.58627726 C14.4472436,0.671411685 24,0 24,0 Z M16.425,10.1644246 C17.8333261,10.1644246 18.975,9.01830529 18.975,7.60449544 C18.975,6.19068562 17.8333261,5.0445663 16.425,5.0445663 C15.0166739,5.0445663 13.875,6.19068562 13.875,7.60449544 C13.875,9.01830529 15.0166739,10.1644246 16.425,10.1644246 Z"
                />
              </g>
            </svg>
            Pending
          </span>
        </dd>
      </dl>
    </header>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Email Address
      </dt>
      <dd
        className="css-11"
      >
        <a
          className="css-12"
          href="mailto:kenny.bania@example.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          kenny.bania@example.com
        </a>
      </dd>
    </dl>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Birth Date
      </dt>
      <dd
        className="css-11"
      >
        06/06/2006
      </dd>
    </dl>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Login
      </dt>
      <dd
        className="css-11"
      >
        <a
          className="css-12"
          href="https://github.com/kennyBania"
          rel="noopener noreferrer"
          target="_blank"
        >
          kennyBania
        </a>
      </dd>
    </dl>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Referred By
      </dt>
      <dd
        className="css-11"
      >
        Simon Taranto
      </dd>
    </dl>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Application Age
      </dt>
      <dd
        className="css-11"
      >
        <time
          dateTime="2010-10-31T12:12:12.000Z"
          title="2010-10-31T12:12:12.000Z"
        >
          7 years ago
        </time>
      </dd>
    </dl>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Resume
      </dt>
      <dd
        className="css-11"
      >
        <a
          className="css-12"
          href="uploads/asset/application-resume.pdf"
          rel="noopener noreferrer"
          target="_blank"
        >
          View PDF
        </a>
      </dd>
    </dl>
  </section>
  <section
    className="css-13"
  >
    <div
      className="css-14"
    >
      <h2
        className="css-15"
      >
        <span
          className="css-nil"
        >
          Online Logic Test
        </span>
        <span
          className="css-16"
        >
          40
        </span>
      </h2>
    </div>
    <div
      className="css-14"
    >
      <h2
        className="css-15"
      >
        <span
          className="css-nil"
        >
          Logic Evaluation
        </span>
        <span
          className="css-16"
        >
          20
        </span>
      </h2>
      <a
        className="css-18"
        fontSize={18}
        href="/match/url/logic-evaluation"
        onClick={[Function]}
      >
        Re-Score Evaluation
      </a>
    </div>
    <div
      className="css-14"
    >
      <h2
        className="css-15"
      >
        <span
          className="css-nil"
        >
          Values Evaluation
        </span>
        <span
          className="css-16"
        >
          20
        </span>
      </h2>
      <a
        className="css-18"
        fontSize={18}
        href="/match/url/values-evaluation"
        onClick={[Function]}
      >
        Re-Score Evaluation
      </a>
    </div>
  </section>
</div>
`;

exports[`<ApplicantModule /> shows the correct snapshot tree for the <ApplicantModule> module with data 1`] = `
.css-0,
[data-css-0] {
  height: 4px;
  background-color: #4d4d4d;
}

.css-1,
[data-css-1] {
  position: relative;
  max-width: 960px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 16px;
  padding-left: 16px;
}

.css-2,
[data-css-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 128px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-3,
[data-css-3] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  font-size: 34px;
  font-weight: 200;
  color: #808080;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.css-4,
[data-css-4] {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  margin-top: 8px;
  margin-bottom: 8px;
  align-items: flex-end;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-align: end;
  -webkit-align-items: flex-end;
}

.css-5,
[data-css-5] {
  font-size: 14px;
  font-weight: 600;
  text-transform: uppercase;
  color: #999;
}

.css-6,
[data-css-6] {
  margin-top: 8px;
  margin-left: 0;
}

.css-7,
[data-css-7] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  margin-top: 8px;
  font-size: 14px;
  font-weight: 400;
  text-transform: uppercase;
  color: #4d4d4d;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-8,
[data-css-8] {
  margin-right: 8px;
}

.css-9,
[data-css-9] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  margin-top: 8px;
  margin-bottom: 8px;
  color: #808080;
  flex-flow: row nowrap;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-flex-flow: row nowrap;
}

.css-10,
[data-css-10] {
  font-size: 14px;
  font-weight: 600;
  text-transform: uppercase;
  color: currentColor;
  min-width: 192px;
}

.css-11,
[data-css-11] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  margin-left: 0;
  font-size: 16px;
  font-weight: 200;
  color: currentColor;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-12,
[data-css-12] {
  position: relative;
  z-index: 2;
  color: #35c5fc;
  text-decoration: none;
  transition: color 200ms;
  -webkit-transition: color 200ms;
  -moz-transition: color 200ms;
}

.css-13,
[data-css-13] {
  position: relative;
  max-width: 960px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 16px;
  padding-left: 16px;
  margin-top: 72px;
}

.css-14,
[data-css-14] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 44px;
  border-bottom: 1px solid #ccc;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-15,
[data-css-15] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-flow: row nowrap;
  font-size: 28px;
  font-weight: 300;
  color: #808080;
  -webkit-flex-flow: row nowrap;
}

.css-16,
[data-css-16] {
  color: #8ad30e;
  margin-left: 8px;
}

.css-16::before,
[data-css-16]::before {
  content: " : ";
  color: #808080;
}

.css-18,
[data-css-18] {
  position: relative;
  z-index: 2;
  color: #35c5fc;
  text-decoration: none;
  transition: color 200ms;
  font-size: 18px;
  -webkit-transition: color 200ms;
  -moz-transition: color 200ms;
}

<div>
  <div
    className="css-0"
  />
  <section
    className="css-1"
  >
    <header
      className="css-2"
    >
      <h2
        className="css-3"
      >
        Kenny Bania
      </h2>
      <dl
        className="css-4"
      >
        <dt
          className="css-5"
        >
          Application Status
        </dt>
        <dd
          className="css-6"
        >
          <span
            className="css-7"
          >
            <svg
              className="css-8"
              height={32}
              viewBox="0 0 24 24"
              width={32}
            >
              <g
                fill="currentColor"
              >
                <path
                  d="M24,0 C24,0 23.4836048,9.80252996 16.4820958,15.2719707 L16.4128111,19.0346251 L11.4820194,24 L11.4746834,20.2882431 L9.63105705,18.6292449 C8.29671435,22.7691304 1.26439406,22.7691304 1.26439406,22.7691304 C1.26439406,22.7691304 1.26439406,16.3396736 5.58319762,14.4450082 L3.94220876,12.6079505 L-2.84217094e-14,12.6079505 L5.07440302,7.66843342 L8.7285621,7.58627726 C14.4472436,0.671411685 24,0 24,0 Z M16.425,10.1644246 C17.8333261,10.1644246 18.975,9.01830529 18.975,7.60449544 C18.975,6.19068562 17.8333261,5.0445663 16.425,5.0445663 C15.0166739,5.0445663 13.875,6.19068562 13.875,7.60449544 C13.875,9.01830529 15.0166739,10.1644246 16.425,10.1644246 Z"
                />
              </g>
            </svg>
            Pending
          </span>
        </dd>
      </dl>
    </header>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Email Address
      </dt>
      <dd
        className="css-11"
      >
        <a
          className="css-12"
          href="mailto:kenny.bania@example.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          kenny.bania@example.com
        </a>
      </dd>
    </dl>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Birth Date
      </dt>
      <dd
        className="css-11"
      >
        06/06/2006
      </dd>
    </dl>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Login
      </dt>
      <dd
        className="css-11"
      >
        <a
          className="css-12"
          href="https://github.com/kennyBania"
          rel="noopener noreferrer"
          target="_blank"
        >
          kennyBania
        </a>
      </dd>
    </dl>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Referred By
      </dt>
      <dd
        className="css-11"
      >
        Simon Taranto
      </dd>
    </dl>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Application Age
      </dt>
      <dd
        className="css-11"
      >
        <time
          dateTime="2010-10-31T12:12:12.000Z"
          title="2010-10-31T12:12:12.000Z"
        >
          7 years ago
        </time>
      </dd>
    </dl>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Evaluators
      </dt>
      <dd
        className="css-11"
      >
        Evaluator 1, Evaluator 2
      </dd>
    </dl>
    <dl
      className="css-9"
    >
      <dt
        className="css-10"
      >
        Resume
      </dt>
      <dd
        className="css-11"
      >
        <a
          className="css-12"
          href="uploads/asset/application-resume.pdf"
          rel="noopener noreferrer"
          target="_blank"
        >
          View PDF
        </a>
      </dd>
    </dl>
  </section>
  <section
    className="css-13"
  >
    <div
      className="css-14"
    >
      <h2
        className="css-15"
      >
        <span
          className="css-nil"
        >
          Online Logic Test
        </span>
        <span
          className="css-16"
        >
          40
        </span>
      </h2>
    </div>
    <div
      className="css-14"
    >
      <h2
        className="css-15"
      >
        <span
          className="css-nil"
        >
          Logic Evaluation
        </span>
        <span
          className="css-16"
        >
          20
        </span>
      </h2>
      <a
        className="css-18"
        fontSize={18}
        href="/match/url/logic-evaluation"
        onClick={[Function]}
      >
        Re-Score Evaluation
      </a>
    </div>
    <div
      className="css-14"
    >
      <h2
        className="css-15"
      >
        <span
          className="css-nil"
        >
          Values Evaluation
        </span>
        <span
          className="css-16"
        >
          20
        </span>
      </h2>
      <a
        className="css-18"
        fontSize={18}
        href="/match/url/values-evaluation"
        onClick={[Function]}
      >
        Re-Score Evaluation
      </a>
    </div>
  </section>
</div>
`;
